<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/appoint_agent"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/change_per_info_edit_style"
            android:gravity="center"
            android:text="@string/appointAgent"
            android:textSize="13sp" />

        <Button
            android:id="@+id/appoint_machine_manager"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/change_per_info_edit_style"
            android:gravity="center"
            android:text="@string/appointMachineManager"
            android:textSize="13sp" />

        <Button
            android:id="@+id/appoint_machine"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/change_per_info_edit_style"
            android:gravity="center"
            android:text="@string/appointMachine"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/from_to_date"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/change_per_info_edit_style"
            android:gravity="center"
            android:text="@string/appointTime" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/payWay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/pay_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/all_pay_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ed"
                    android:checked="true"
                    android:text="@string/allPayMode" />

                <RadioButton
                    android:id="@+id/money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ed"
                    android:text="@string/cash" />

                <RadioButton
                    android:id="@+id/wechart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ed"
                    android:text="@string/weChat" />

                <RadioButton
                    android:id="@+id/alipay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ed"
                    android:text="@string/alipay" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:button="@drawable/radio_button_style"
            android:gravity="center"
            android:text="@string/isRefund" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/refund_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_style"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/not_refund"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ed"
                    android:text="@string/not_refund" />

                <RadioButton
                    android:id="@+id/has_refund"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ed"
                    android:text="@string/has_refund" />

                <RadioButton
                    android:id="@+id/trade_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/ed"
                    android:checked="true"
                    android:text="@string/tradeRight" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>