<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addPopAnim"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <Button
        android:id="@+id/create_sys_manager"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:alpha="0"
        android:background="@drawable/style_create_button"
        android:text="@string/create_sys_manager"
        android:textColor="#000000" />

    <Button
        android:id="@+id/create_agent"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:alpha="0"
        android:background="@drawable/style_create_button"
        android:text="@string/create_agent"
        android:textColor="#000000" />

    <Button
        android:id="@+id/create_machine_manager"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:alpha="0"
        android:background="@drawable/style_create_button"
        android:text="@string/create_machine_manager"
        android:textColor="#000000" />
</RelativeLayout>